# libfm

./: .gitignore  .hgignore  AUTHORS  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  libfm-extra.pc.in  libfm-gtk.pc  libfm-gtk.pc.in  libfm-gtk3.pc.in  libfm.pc  libfm.pc.in
data/: Makefile.am  archivers.list  gnome-terminal.in  libfm-defapps.desktop.in  libfm-pref-apps.1.in  libfm-pref-apps.desktop  libfm-pref-apps.desktop.in  libfm.conf  libfm.xml  lxshortcut.desktop.in  pref-apps.conf  terminals.list
data/ui/: Makefile.am  app-chooser.glade  app-chooser.ui  ask-rename.glade  ask-rename.ui  choose-icon.ui  default-apps.glade  exec-file.glade  file-prop.glade  file-prop.ui  filesearch.glade  preferred-apps.glade  preferred-apps.ui  progress.glade  progress.ui
docs/: Makefile.am
docs/reference/libfm/: Makefile.am  libfm-docs.xml  libfm-sections.txt
po/: LINGUAS  POTFILES  POTFILES.in  POTFILES.skip  af.gmo  af.po  ar.gmo  ar.po  be.po  bg.gmo  bg.po  bn.po  bn_IN.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  en_GB.gmo  en_GB.po  es.gmo  es.po  es_VE.gmo  es_VE.po  et.po  eu.po  fa.po  fi.gmo  fi.po  fo.gmo  fo.po  fr.gmo  fr.po  gl.gmo  gl.po  (+63 more)
src/: Makefile  Makefile.am  fm-clipboard.c  fm-deep-count-job.c  fm-deep-count-job.h  fm-dir-list-job.c  fm-dir-list-job.h  fm-extra.h  fm-extra.h.in  fm-file-info.c  fm-file-info.h  fm-file-menu.c  fm-file-menu.h  fm-file-ops-job.c  fm-file-ops-job.h  fm-file-properties.c  fm-file-properties.h  fm-folder-model.c  fm-folder-model.h  fm-folder-view.c  fm-folder-view.h  fm-folder.c  fm-folder.h  fm-gtk.c  fm-gtk.h  fm-job.c  fm-job.h  fm-list.c  fm-list.h  fm-mime-type.c  fm-mime-type.h  fm-path-list.c  fm-path-list.h  fm-path.c  fm-path.h  fm-seal.h  fm-utils.c  fm-utils.h  fm-version.h.in  fm.c  (+16 more)
src/.deps/: pcmanfm-fm-dir-list-job.Po  pcmanfm-fm-file-info.Po  pcmanfm-fm-folder-model.Po  pcmanfm-fm-folder-view.Po  pcmanfm-fm-folder.Po  pcmanfm-fm-job.Po  pcmanfm-fm-mime-type.Po  pcmanfm-fm-utils.Po  pcmanfm-fm.Po  pcmanfm-folder-view.Po  pcmanfm-main-win.Po  pcmanfm-pcmanfm.Po
src/actions/: Makefile.am  action.vala  condition.vala  parameters.vala  profile.vala  utils.vala
src/base/: fm-action.c  fm-action.h  fm-app-info.c  fm-app-info.h  fm-archiver.c  fm-archiver.h  fm-bookmarks.c  fm-bookmarks.h  fm-config.c  fm-config.h  fm-dummy-monitor.c  fm-dummy-monitor.h  fm-file-info.c  fm-file-info.h  fm-file-launcher.c  fm-file-launcher.h  fm-file-search.c  fm-file-search.h  fm-file.c  fm-file.h  fm-folder-config.c  fm-folder-config.h  fm-folder.c  fm-folder.h  fm-icon.c  fm-icon.h  fm-list.c  fm-list.h  fm-marshal.c  fm-marshal.h  fm-marshal.list  fm-mime-type.c  fm-mime-type.h  fm-module.c  fm-module.h  fm-monitor.c  fm-monitor.h  fm-nav-history.c  fm-nav-history.h  fm-path.c  (+15 more)
src/demo/: libfm-demo.c  libfm-file-search-cli-demo.c  main-win-ui.c  main-win.c  main-win.h
src/exo/: exo-tree-view.c
src/extra/: fm-xml-file.c  fm-xml-file.h
src/gio/: fm-app-lookup.c
src/gtk/: fm-app-chooser-combo-box.c  fm-app-chooser-combo-box.h  fm-app-chooser-dlg.c  fm-app-chooser-dlg.h  fm-app-menu-view.c  fm-app-menu-view.h  fm-cell-renderer-pixbuf.c  fm-cell-renderer-pixbuf.h  fm-cell-renderer-text.c  fm-cell-renderer-text.h  fm-clipboard.c  fm-clipboard.h  fm-dentry-properties.c  fm-dir-tree-model.c  fm-dir-tree-model.h  fm-dir-tree-view.c  fm-dir-tree-view.h  fm-dnd-auto-scroll.c  fm-dnd-dest.c  fm-dnd-dest.h  fm-dnd-src.c  fm-dnd-src.h  fm-file-menu.c  fm-file-menu.h  fm-file-ops.c  fm-file-ops.h  fm-file-properties.c  fm-file-properties.h  fm-folder-exo-view.c  fm-folder-exo-view.h  fm-folder-model.c  fm-folder-model.h  fm-folder-view.c  fm-folder-view.h  fm-gtk-bookmarks.c  fm-gtk-bookmarks.h  fm-gtk-file-launcher.c  fm-gtk-file-launcher.h  fm-gtk-marshal.list  fm-gtk-utils.c  (+23 more)
src/gtk/exo/: README  exo-icon-view.c  exo-icon-view.h  exo-marshal.c  exo-marshal.h  exo-private.c  exo-private.h  exo-tree-view.c  exo-tree-view.h
src/job/: fm-deep-count-job.c  fm-deep-count-job.h  fm-dir-list-job.c  fm-dir-list-job.h  fm-file-info-job.c  fm-file-info-job.h  fm-file-ops-job-change-attr.c  fm-file-ops-job-change-attr.h  fm-file-ops-job-delete.c  fm-file-ops-job-delete.h  fm-file-ops-job-xfer.c  fm-file-ops-job-xfer.h  fm-file-ops-job.c  fm-file-ops-job.h  fm-file-search-job.c  fm-file-search-job.h  fm-job.c  fm-job.h  fm-search-job.c  fm-search-job.h  fm-simple-job.c  fm-simple-job.h
src/modules/: Makefile.am  gtk-fileprop-x-desktop.c  gtk-menu-actions.c  gtk-menu-trash.c  vfs-menu.c  vfs-search.c
src/tests/: Makefile.am  libfm-file-search-cli-demo.c  test-fm-path.c
src/tools/: libfm-defapps.c  libfm-pref-apps.c  lxshortcut.c
src/udisks/: dbus-utils.c  dbus-utils.h  fm-udisks.c  fm-udisks.h  g-udisks-device.c  g-udisks-device.h  g-udisks-drive.c  g-udisks-drive.h  g-udisks-mount.c  g-udisks-mount.h  g-udisks-volume-monitor.c  g-udisks-volume-monitor.h  g-udisks-volume.c  g-udisks-volume.h
src/vfs/: fm-vfs-menu.c  fm-vfs-menu.h  fm-vfs-search.c  fm-vfs-search.h
